# singulariTeaWorld

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: agent-bridge.md  architecture-v2.md  blueprint-system-map.md  body-resource-state-blueprint.md  causal-simulation-upgrade-set.md  character-text-design-blueprint.md  cloudflare-free-frontdoor.md  consequence-spine-blueprint.md  context-capsule-lazy-revival-blueprint.md  deployment.md  encounter-surface-interaction-contract.md  extra-memory-architecture.md  host-worker.md  llm-led-rust-audited-resolution.md  location-graph-blueprint.md  memory-revival-policy-blueprint.md  plot-thread-blueprint.md  promise-ledger-unchosen-echoes-blueprint.md  relationship-graph-blueprint.md  scene-director-dramatic-pacing.md  scene-pressure-blueprint.md  social-exchange-dialogue-stance-blueprint.md  visual-asset-graph-blueprint.md  visual-canon-budget.md  vn-engine-player-surface-blueprint.md  webgpt-mcp-activation.md  webgpt-tool-form-turn-blueprint.md  webgpt-turn-draft-assembly-blueprint.md  working-self-memory-blueprint.md  world-lore-blueprint.md  world-simulator-engine-v2.md
scripts/: deploy_cloudflare_frontdoor.sh  fresh-clone-e2e.sh  install-codex-mcp.sh  privacy-audit.sh  release-build.sh  run_mcp_tunnel.sh  setup-webgpt-runtime.sh  smoke-local.sh
src/: actor_agency.rs  adjudication.rs  affordance_graph.rs  agent_bridge.rs  autobiographical_index.rs  backend_selection.rs  belief_graph.rs  body_resource.rs  change_ledger.rs  character_text_design.rs  chat.rs  chatgpt_vn_widget.html  codex_app_server_image.mjs  codex_app_server_turn.mjs  codex_view.rs  consequence_spine.rs  context_capsule.rs  encounter_surface.rs  entity_update.rs  event_ledger.rs  extra_memory.rs  hook_ledger.rs  host_supervisor.rs  (+52 more)
webgpt-mcp-checkout/: Cargo.toml
webgpt-mcp-checkout/chatgpt-worker/: package-lock.json  package.json  selectors.toml
webgpt-mcp-checkout/chatgpt-worker/scripts/: build.mjs
webgpt-mcp-checkout/chatgpt-worker/src/: index.js
webgpt-mcp-checkout/scripts/: webgpt-cdp-session.sh  webgpt-mcp.sh
webgpt-mcp-checkout/src/: main.rs  webgpt_types.rs
(+16 files in other folders)
