[package]
name = "singulari-world"
description = "File-backed persistent world simulator kernel"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"

[[bin]]
name = "singulari-world"
path = "src/main.rs"

[[bin]]
name = "singulari-world-mcp"
path = "src/mcp_main.rs"

[lib]
name = "singulari_world"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
rmcp = { version = "0.15.0", features = ["base64", "macros", "schemars", "server", "transport-async-rw", "transport-io"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "=0.9.34"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
dead_code = "deny"
unused_imports = "deny"
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
