[package]
name = "webgpt-mcp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"

[[bin]]
name = "webgpt-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.102"
base64 = "=0.22.1"
hex = "=0.4.3"
rmcp = { version = "=0.15.0", features = ["base64", "macros", "schemars", "server", "transport-async-rw", "transport-io"] }
schemars = { version = "=1.2.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
tokio = { version = "=1.52.1", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[lints.rust]
dead_code = "deny"
unused_imports = "deny"
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
